# hivemind

./: Cargo.toml  README.md  build.rs
proto/: solver.proto
src/: client.rs  consumer.rs  producer.rs  server.rs
src/parser/: mod.rs
